--- a/_includes/resume/certificates.html
+++ b/_includes/resume/certificates.html
@@ -1,4 +1,33 @@
 <div class="list-groups">
+  {% assign certificates = data[1] %}
+  {% for content in certificates %}
+  <div class="list-group col-md-6">
+    <table class="table-cv list-group-table">
+      <tbody>
+        <tr>
+          <td class="list-group-category-icon"></td> <!-- No icon in the provided JSON -->
+          <td colspan="2" class="list-group-category">
+              {% if content.url %}
+                  <a href="{{ content.url }}">{{ content.title }}</a>
+              {% else %}
+                  {{ content.title }}
+              {% endif %}
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td class="list-group-name"><b>{{ content.awarder }}</b></td>
+          <td class="list-group-name"></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  {% endfor %}
+</div>
+
+
+
+<!-- <div class="list-groups">
     {% assign certificates = data[1] | sort: 'date' | reverse %}
     {% for content in certificates %}
     <div class="list-group col-md-6">
@@ -10,7 +39,7 @@
             {% else %}
             <td class="list-group-category-icon"></td>
             {% endif %}
-            <!-- Calculate colspan number for category title -->
+            Calculate colspan number for category title
             {% assign i = 1 %}
             {% for item in content.items %}
               {% assign i = i | plus:1 %}
@@ -28,4 +57,4 @@
       </table>
     </div>
     {% endfor %}
-  </div>
+  </div> -->
