--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -2,6 +2,39 @@
   {% assign education = data[1] | sort: 'startDate' | reverse %}
   {% for content in education %}
   <li class="list-group-item">
+    
+      <div class="col-10 mt-2">
+        <h6 class="title font-weight-bold ml-1 ml-md-4"><a href="{{ content.url }}">{{content.studyType}}</a></h6>
+        <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic;">{{content.institution}}</h6>
+        <!-- <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic;">{{content.area}}</h6> -->
+        
+        {% if content.startDate and content.startDate != "" %}
+        {% assign startDate = content.startDate | split: "-" | slice: 0,2 | join: "." %}
+        {% assign endDate   = content.endDate   | split: "-" | slice: 0,2 | join: "." | default: "Present" %}
+        {% assign date = startDate | append: " - " | append: endDate %}
+        <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle ml-1 ml-md-4 mb-2">
+          {{ date }}
+        </span>
+        {% endif %}
+        {% if content.location %}
+        <p class="location ml-1 ml-md-4"><i class="font-size: 0.95rem; font-style: italic;"></i> {{ content.location }}</p>
+        {% endif %}
+        <div class="items ml-1 ml-md-4">
+          {% for item in content.courses %}
+              <span class="item">{{ item }}</span>{% unless forloop.last %} | {% endunless %}
+          {% endfor %}
+        </div>
+      </div>
+    
+  </li>
+  {% endfor %}
+</ul>
+
+
+<!-- <ul class="card-text font-weight-light list-group list-group-flush">
+  {% assign education = data[1] | sort: 'startDate' | reverse %}
+  {% for content in education %}
+  <li class="list-group-item">
     <div class="row">
       <div class="col-xs-2 cl-sm-2 col-md-2 text-center" style="width: 75px;">
         {% if content.startDate and content.startDate!="" %}
@@ -48,4 +81,4 @@
     </div>
   </li>
   {% endfor %}
-</ul>
+</ul> -->
