--- a/_includes/resume/projects.html
+++ b/_includes/resume/projects.html
@@ -1,4 +1,4 @@
-<ul class="card-text font-weight-light list-group list-group-flush">
+<!-- <ul class="card-text font-weight-light list-group list-group-flush">
   {% for content in data[1] %}
   <li class="list-group-item">
     <div class="row">
@@ -25,6 +25,28 @@
           </li>
           {% endfor %}
         </ul>
+      </div>
+    </div>
+  </li>
+  {% endfor %}
+</ul> -->
+<ul class="card-text font-weight-light list-group list-group-flush">
+  {% for content in data[1] %}
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-xs-10 cl-sm-10 col-md-10">
+        <h6 class="title font-weight-bold ml-1 ml-md-4" style="color: var(--global-theme-color);"><a>{{content.name}}</a></h6>
+        <p class="ml-1 ml-md-4" style="font-size: 0.95rem;">{{content.description}}</p>
+        <!-- <span class="ml-1 ml-md-4" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+          {% for technology in content.technologies %}
+              {{ technology }}{% unless forloop.last %} | {% endunless %}
+          {% endfor %}
+      </span> -->
+      <div class="items ml-1 ml-md-4">
+        {% for item in content.technologies %}
+            <span class="item">{{ item }}</span>{% unless forloop.last %} | {% endunless %}
+        {% endfor %}
+      </div>
       </div>
     </div>
   </li>
