--- a/_includes/resume/work.html
+++ b/_includes/resume/work.html
@@ -3,6 +3,41 @@
   {% for content in work %}
   <li class="list-group-item">
     <div class="row">
+      <div class="col-10 mt-2">
+        <h6 class="title font-weight-bold ml-1 ml-md-4"><a href="{{ content.url }}">{{content.position}}</a></h6>
+        <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">{{content.name}}</h6>
+        
+        {% if content.startDate %}
+        {% assign startDate = content.startDate | split: "-" | slice: 0,2 | join: "." %}
+        {% assign endDate   = content.endDate   | split: "-" | slice: 0,2 | join: "." | default: "Present" %}
+        {% assign date = startDate | append: " - " | append: endDate %}
+        <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle ml-1 ml-md-4">
+          {{ date }}
+        </span>
+        {% endif %}
+        
+        <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic;">{{content.summary}}</h6>
+        <ul class="items ml-1 ml-md-4">
+            {% for item in content.highlights %}
+            <li>
+                <span class="item">{{ item }}</span>
+            </li>
+            {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </li>
+  {% endfor %}
+</ul>
+
+
+
+
+<!-- <ul class="card-text font-weight-light list-group list-group-flush">
+  {% assign work = data[1] | sort: 'startDate' | reverse %}
+  {% for content in work %}
+  <li class="list-group-item">
+    <div class="row">
       <div class="col-xs-2 cl-sm-2 col-md-2 text-center" style="width: 75px;">
         {% if content.startDate %}
         {% assign startDate = content.startDate | split: "-" | slice: 0,2 | join: "." %}
@@ -31,4 +66,4 @@
     </div>
   </li>
   {% endfor %}
-</ul>
+</ul> -->
