--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <!-- _layouts/cv.html -->
-{% unless site.data.resume %}
-<div class="post">
+<!-- {% unless site.data.resume %} -->
+<!-- <div class="post">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
@@ -36,8 +36,8 @@ layout: default
       </div>
   </article>
 
-</div>
-{% else %}
+</div> -->
+<!-- {% else %}  -->
 <div class="post">
 
   <header class="post-header">
@@ -48,14 +48,14 @@ layout: default
   <article>
     <div class="cv">
       {% for data in site.data.resume %}
-        {% if site.jsonresume and site.jsonresume.size > 0 %}
+        <!-- {% if site.jsonresume and site.jsonresume.size > 0 %}
           {% unless site.jsonresume contains data[0] %}
             {% continue %}
           {% endunless %}
         {% endif %}
         {% if data[0] == "meta" or data[1].size == 0 %}
           {% continue %}
-        {% endif %}
+        {% endif %} -->
         <a class="anchor" id="{{ data[0] }}"></a>
         <div class="card mt-3 p-3">
           <h3 class="card-title font-weight-medium">{{ data[0] | capitalize }}</h3>
@@ -93,4 +93,4 @@ layout: default
   </article>
 
 </div>
-{% endunless %}
+<!-- {% endunless %} -->
