--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,6 @@
 <!-- _includes/projects.html -->
-<div class="grid-sizer"></div>
-<div class="grid-item">
+<!-- <div class="grid-sizer"></div> -->
+<div class="pgrid-item">
   {% if project.redirect -%}
   <a href="{{ project.redirect }}">
     {%- else -%}
