--- a/_includes/resume/volunteer.html
+++ b/_includes/resume/volunteer.html
@@ -1,4 +1,37 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
+  {% assign work = data[1] | sort: 'startDate' | reverse %}
+  {% for content in work %}
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col-10 mt-2">
+        <h6 class="title font-weight-bold "><a href="{{ content.url }}">{{content.organization}}</a></h6>
+        <h6 class="" style="font-size: 0.95rem;">{{content.position}}</h6>
+        
+        {% if content.startDate %}
+        {% assign startDate = content.startDate | split: "-" | slice: 0,2 | join: "." %}
+        {% assign endDate   = content.endDate   | split: "-" | slice: 0,2 | join: "." | default: "Present" %}
+        {% assign date = startDate | append: " - " | append: endDate %}
+        <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle md-3">
+          {{ date }}
+        </span>
+        {% endif %}
+        <h6 class="mt-2" style="font-size: 0.95rem; ">{{content.summary}}</h6>
+        <!--  font-style: italic; ml-1 ml-md-4 -->
+        <ul class="items ">
+            {% for item in content.highlights %}
+            <li>
+                <span class="item">{{ item }}</span>
+            </li>
+            {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </li>
+  {% endfor %}
+</ul>
+
+
+<!-- <ul class="card-text font-weight-light list-group list-group-flush">
   {% assign volunteer = data[1] | sort: 'startDate' | reverse %}
   {% for content in volunteer %}
   <li class="list-group-item">
@@ -31,4 +64,4 @@
     </div>
   </li>
   {% endfor %}
-</ul>
+</ul> -->
